{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 33,
  "lineage": "a550c439-3cba-3b04-bdc2-d9d946dfbc9d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "master_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:848922561720:instance/i-04323fad9e50c939a",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04323fad9e50c939a",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "instance-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0509c4d85a8bc9d74",
            "private_dns": "ip-10-0-1-161.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.161",
            "public_dns": "ec2-18-208-142-250.compute-1.amazonaws.com",
            "public_ip": "18.208.142.250",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-015fc4895566ed69e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06738165830a3f67f",
            "tags": {
              "Name": "Master-Instance"
            },
            "tags_all": {
              "Name": "Master-Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-02948f435ab355701",
              "sg-04f28dc72121404bf",
              "sg-06086e38304bae860",
              "sg-0ace4d532abf1a0bb"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.jenkins_sg",
            "aws_security_group.monitoring_sg",
            "aws_security_group.nexus_sg",
            "aws_security_group.ssh_sg",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848922561720:internet-gateway/igw-04320d3cc1e41571a",
            "id": "igw-04320d3cc1e41571a",
            "owner_id": "848922561720",
            "tags": {
              "Name": "Main-IGW"
            },
            "tags_all": {
              "Name": "Main-IGW"
            },
            "vpc_id": "vpc-09c72638e8d610b8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848922561720:route-table/rtb-0b9d385fe99d7f5fe",
            "id": "rtb-0b9d385fe99d7f5fe",
            "owner_id": "848922561720",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04320d3cc1e41571a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public-RT"
            },
            "tags_all": {
              "Name": "Public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c72638e8d610b8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037802b47a43b75df",
            "route_table_id": "rtb-0b9d385fe99d7f5fe",
            "subnet_id": "subnet-06738165830a3f67f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "jenkins_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848922561720:security-group/sg-04f28dc72121404bf",
            "description": "Allow HTTP, SSH, and Jenkins traffic",
            "egress": [],
            "id": "sg-04f28dc72121404bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "jenkins-sg",
            "name_prefix": "",
            "owner_id": "848922561720",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Jenkins-SG"
            },
            "tags_all": {
              "Name": "Jenkins-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c72638e8d610b8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "monitoring_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848922561720:security-group/sg-06086e38304bae860",
            "description": "Allow web access to Prometheus and Grafana",
            "egress": [],
            "id": "sg-06086e38304bae860",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Grafana UI access",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Prometheus UI access",
                "from_port": 9090,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 9090
              }
            ],
            "name": "monitoring-sg",
            "name_prefix": "",
            "owner_id": "848922561720",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Monitoring-SG"
            },
            "tags_all": {
              "Name": "Monitoring-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c72638e8d610b8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nexus_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848922561720:security-group/sg-0ace4d532abf1a0bb",
            "description": "Allow web access to Nexus repository manager",
            "egress": [],
            "id": "sg-0ace4d532abf1a0bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Nexus UI access",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "nexus-sg",
            "name_prefix": "",
            "owner_id": "848922561720",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Nexus-SG"
            },
            "tags_all": {
              "Name": "Nexus-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c72638e8d610b8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848922561720:security-group/sg-02948f435ab355701",
            "description": "Allow strictly controlled SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02948f435ab355701",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.184.130/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ssh-sg",
            "name_prefix": "",
            "owner_id": "848922561720",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SSH-SG"
            },
            "tags_all": {
              "Name": "SSH-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-09c72638e8d610b8b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848922561720:subnet/subnet-06738165830a3f67f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06738165830a3f67f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848922561720",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Multi-tier-app-Public-Subnet"
            },
            "tags_all": {
              "Name": "Multi-tier-app-Public-Subnet"
            },
            "vpc_id": "vpc-09c72638e8d610b8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:848922561720:vpc/vpc-09c72638e8d610b8b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07a8f69f1f3c9c310",
            "default_route_table_id": "rtb-0a521ddb03d0324c0",
            "default_security_group_id": "sg-080b1330751867dea",
            "dhcp_options_id": "dopt-00475227bd8d4cc58",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09c72638e8d610b8b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a521ddb03d0324c0",
            "owner_id": "848922561720",
            "tags": {
              "Name": "Multi-tier-app-VPC"
            },
            "tags_all": {
              "Name": "Multi-tier-app-VPC"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}